--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/jwt": "10.1.0",
     "@nestjs/passport": "10.0.0",
     "@nestjs/platform-express": "10.0.3",
+    "@prisma/client": "^5.10.2",
     "reflect-metadata": "0.1.13",
     "rimraf": "5.0.1",
     "rxjs": "7.8.1"
@@ -44,6 +45,8 @@
     "eslint-plugin-import": "2.27.5",
     "jest": "29.6.4",
     "prettier": "2.8.8",
+    "prisma": "^5.10.2",
+    "strip-ansi": "^7.1.0",
     "supertest": "6.3.3",
     "ts-jest": "29.1.1",
     "ts-loader": "9.4.4",
